--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # From https://github.com/github/gitignore/blob/master/Autotools.gitignore
 # http://www.gnu.org/software/automake
 
-Makefile.in
+# Makefile.in
 /ar-lib
 /mdate-sh
 /py-compile
@@ -18,12 +18,13 @@ Makefile.in
 /config.guess
 /config.h.in
 /config.sub
-/configure
+# /configure
 /configure.scan
 /depcomp
 /install-sh
 /missing
 /stamp-h1
+
 
 # https://www.gnu.org/software/libtool/
 
@@ -32,3 +33,12 @@ Makefile.in
 # http://www.gnu.org/software/texinfo
 
 /texinfo.tex
+
+# Produced by ./configure
+
+/config.h
+/config.log
+/config.status
+/Makefile
+/source/Makefile
+.deps/
